--- a/app/src/main/res/layout/point_layout.xml
+++ b/app/src/main/res/layout/point_layout.xml
@@ -9,22 +9,28 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
+
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10sp"
+            android:textSize="35sp"
             android:id="@+id/textView"
-            android:text="@string/app_name">
+            android:text="@string/app_name"
+            android:textStyle="bold">
         </TextView>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:textSize="50sp"
             android:id="@+id/textView1"
-            android:text="@string/app_name">
+            android:text="0">
         </TextView>
+
 
         <Button
             android:layout_width="wrap_content"
