--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,26 +10,10 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center">
-    <com.ivik.basketballcounter.PointLayout
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/team1point_view">
-    </com.ivik.basketballcounter.PointLayout>
+        android:gravity="center"
+        android:id="@+id/main_layout"
+        android:orientation="horizontal">
 
-    <View
-        android:layout_marginTop="10dp"
-        android:layout_width="1dp"
-        android:layout_height="500dp"
-        android:background="@android:color/darker_gray"
-        android:layout_marginStart="55dp"
-        android:layout_marginEnd="55dp"/>
-
-    <com.ivik.basketballcounter.PointLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/team2point_view">
-    </com.ivik.basketballcounter.PointLayout>
     </LinearLayout>
 
 </LinearLayout>
