--- a/app/src/main/res/layout/point_layout.xml
+++ b/app/src/main/res/layout/point_layout.xml
@@ -10,7 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:id="@+id/teampoint_view">
 
 
 
@@ -19,7 +20,6 @@
             android:layout_height="wrap_content"
             android:textSize="35sp"
             android:id="@+id/textView"
-            android:text="@string/app_name"
             android:textStyle="bold"
             android:clickable="true">
         </TextView>
@@ -57,13 +57,13 @@
             android:padding="25dp">
         </Button>
 
-<!--        <Button-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Back"-->
-<!--            android:id="@+id/backbtn"-->
-<!--            android:padding="10dp">-->
-<!--        </Button>-->
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            android:id="@+id/backbtn"
+            android:padding="10dp">
+        </Button>
 
     </LinearLayout>
 
